# harmony-retrieval-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  Plan.md  README.md  docker-compose.yml  pyproject.toml
docs/: cmr_patterns.md  opendap_quirk_ledger.md  tta_audit.md
docs/prd/: grouped-variable-path-resolution.md  hardening-opendap-routing-failure-legibility-backlog.md  opendap-fallback-unavailable-signal.md  opendap-planning-seam-and-typed-handle-resolvers.md  record-provenance-events-and-validate-resample-time-freq.md
prompts/: 00_README.md  01_phase0_tta_audit.md  02_phase1_scaffold.md  03_phase2_cmr_patterns.md  04_phase2_cmr_capabilities.md  05_phase3_workspace_provenance.md  06_phase4_base_auth.md  07_phase4_harmony_router.md  08_phase5_discovery_tools.md  09_phase6_area_coverage.md  10_phase6_retrieval.md  11_phase7_preview_transform.md  12_phase7_opendap_appeears.md  13_phase8_provenance_hardening.md
scripts/: extract_natural_earth_bboxes.py
sql/: 01_catalog.sql  02_workspace.sql  03_provenance.sql
src/earthdata_mcp/: __init__.py  config.py  db.py  server.py
src/earthdata_mcp/catalog/: __init__.py  enrichment.py  kms.py
src/earthdata_mcp/jobs/: __init__.py  crud.py  models.py  state.py  worker.py
src/earthdata_mcp/providers/: __init__.py  _capabilities.py  appeears.py  auth.py  base.py  cmr.py  harmony.py  opendap.py  ratelimit.py  request_spec.py  router.py
src/earthdata_mcp/storage/: __init__.py  backend.py  local.py  s3.py
src/earthdata_mcp/tools/: __init__.py  _dataio.py  area.py  coverage.py  discovery.py  preview.py  provenance.py  retrieval.py  transform.py  understanding.py
src/earthdata_mcp/workspace/: __init__.py  handles.py  models.py  provenance.py  store.py
src/harmony_retrieval_mcp/: config.py  db.py  server.py
src/harmony_retrieval_mcp/catalog/: enrichment.py  kms.py
src/harmony_retrieval_mcp/providers/: auth.py  (+7 more)
tests/: conftest.py
tests/fixtures/: mcd19a2_lpcloud_capabilities.json  swot_ssh_multi_service_capabilities.json  tempo_no2_l2_capabilities.json  tempo_no2_l3_umm_c.json
tests/integration/: __init__.py  test_durable_pipeline.py
tests/live/: __init__.py  bench_cloud_opendap_vs_harmony.py  test_appeears_point.py  test_edl_auth.py  test_full_retrieval.py  test_harmony_submit.py  test_opendap_subset.py
tests/unit/: test_auth.py  test_base_protocols.py  test_capabilities.py  test_cmr.py  test_config.py  test_enrichment.py  test_kms.py  test_provenance.py  test_ratelimit.py  test_router.py  test_storage_local.py  test_workspace.py  test_workspace_handles.py
(+40 files in other folders)
