[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony-retrieval-mcp"
version = "0.1.0"
description = "NASA Harmony / Earthdata MCP server — retrieval, transformation, and provenance"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "xarray>=2024.0",
    "zarr>=3.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "shapely>=2.0,<2.1",
    "pyproj>=3.6",
    "rioxarray>=0.17",
    "rasterio>=1.3",
    "harmony-py>=1.3",
    "earthaccess>=0.17",
    "pydap>=3.4",
    "h5netcdf>=1.3",
    "PyYAML>=6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "coverage>=7.6",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
