[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthdata-mcp"
version = "0.1.0"
description = "NASA Earthdata MCP server — retrieval, transformation, and provenance"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "harmony-py>=0.4",
    "earthaccess>=0.11",
    "xarray>=2024.0",
    "zarr>=3.0",
    "pyarrow>=18.0",
    "arq>=0.26",
    "redis>=5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Object-store backend (off by default; LocalFilesystemBackend needs none of this).
s3 = [
    "s3fs>=2024.0",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "coverage>=7.6",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/earthdata_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: needs real Earthdata Login credentials / network (run on demand, nightly CI)",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
